crates/stef-parser/tests/snapshots/parser__print@struct-many-ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct-many-ws.stef
---
/// Some comment
struct Sample<A, B> {
    a: u32 @1,
    b: bool @2,
}


