crates/stef-parser/tests/snapshots/parser__print@struct-min-ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct-min-ws.stef
---
struct Sample<T> {
    a: u32 @1,
    b: bool @2,
    c: T @3,
}


