crates/stef-parser/tests/snapshots/parser__print@struct-tuple.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct-tuple.stef
---
/// Basic struct.
struct Sample(u32 @1, bool @2)


