crates/stef-parser/tests/snapshots/parser__print@struct_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct_basic.stef
---
/// Basic struct.
struct Sample {
    a: u32 @1,
    /// Second field
    b: bool @2,
}


