crates/stef-parser/tests/snapshots/parser__print@struct_generics.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/stef-parser/tests/inputs/struct_generics.stef
---
/// Generic key-value pair.
struct KeyValue<K, V> {
    key: K @1,
    value: V @2,
}


