crates/stef-parser/tests/snapshots/parser__print@struct_many_ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Some comment\n       struct      Sample<\n            T\n        >  {\n\n      a:    u32    @1,\n      b:    bool   @2,\n      c:    T      @3,\n    }"
input_file: crates/stef-parser/tests/inputs/struct_many_ws.stef
---
/// Some comment
struct Sample<T> {
    a: u32 @1,
    b: bool @2,
    c: T @3,
}


