crates/stef-parser/tests/snapshots/parser__print@types-basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/types-basic.stef
---
struct Sample {
    f01: bool @1,
    f02: u8 @2,
    f03: u16 @3,
    f04: u32 @4,
    f05: u64 @5,
    f06: u128 @6,
    f07: i8 @7,
    f08: i16 @8,
    f09: i32 @9,
    f10: i64 @10,
    f11: i128 @11,
    f12: f32 @12,
    f13: f64 @13,
    f14: string @14,
    f15: &string @15,
    f16: bytes @16,
    f17: &bytes @17,
    f18: box<string> @18,
    f19: box<bytes> @19,
    f20: (u32, u32, u32) @20,
    f21: [u32; 12] @21,
}


