crates/stef-parser/tests/snapshots/parser__print@types-nested.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/types-nested.stef
---
struct Sample {
    value: vec<option<non_zero<hash_map<i64, box<string>>>>> @1,
}


