crates/stef-parser/tests/snapshots/parser__print@types-non-zero.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/types-non-zero.stef
---
struct Sample {
    f01: non_zero<u8> @1,
    f02: non_zero<u16> @2,
    f03: non_zero<u32> @3,
    f04: non_zero<u64> @4,
    f05: non_zero<u128> @5,
    f06: non_zero<i8> @6,
    f07: non_zero<i16> @7,
    f08: non_zero<i32> @8,
    f09: non_zero<i64> @9,
    f10: non_zero<i128> @10,
    f11: non_zero<string> @11,
    f12: non_zero<bytes> @12,
    f13: non_zero<vec<string>> @13,
    f14: non_zero<hash_map<string, bytes>> @14,
    f15: non_zero<hash_set<string>> @15,
}


